# md-to-pdf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  SKILL.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-md-pdf.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: acceptance.yml  autofill-linux-baselines.yml  ci.yml  docs.yml  regenerate-baselines.yml  release-audit.yml  release.yml
brand_kits/: README.md  branding-and-ux.md  compliance.md  theme.yaml
docs/: brand-pack-authoring.md  brand-packs.md  cli-reference.md  cli.md  determinism.md  index.md  installation.md  mkdocs.yml  python-api.md  quickstart.md  roadmap.md  watermarks.md
docs/acceptance/: v0.2.1.yaml
docs/errors/: index.md
docs/superpowers/plans/: 2026-04-26-md-to-pdf-v2.0-plan-1-walking-skeleton.md  2026-04-26-md-to-pdf-v2.0-plan-2-ast-transformers-and-brand.md  2026-04-26-plan-1-review-patch.md  2026-04-26-plan-2-review-patch.md  2026-04-27-md-to-pdf-v2.0-plan-3-renderers-and-flowables.md  2026-04-27-md-to-pdf-v2.0-plan-4-watermarks-audit-determinism.md  2026-04-27-md-to-pdf-v2.0-plan-5-uat-golden-release.md  2026-04-27-plan-3-review-patch.md  2026-04-27-plan-4-review-patch-pass-2.md  2026-04-27-plan-4-review-patch.md  2026-04-27-plan-5-review-patch-pass-2.md  2026-04-27-plan-5-review-patch.md  2026-04-29-md-to-pdf-v2.0-plan-2-ast-transformers-brand.md
docs/superpowers/specs/: 2026-04-25-md-to-pdf-v2.x-roadmap.md  2026-04-26-md-to-pdf-v2.0-foundation-design.md
examples/: README.md
examples/brands/acme-neutral/: LICENSE  README.md  brand.yaml  compliance.yaml  theme.yaml
examples/brands/idimsum/: LICENSE  README.md  brand.yaml  compliance.yaml  theme.yaml
examples/contributed/quotation/: TJI_Quotation_20260413_v1.0_zh-HK.html  TJI_Quotation_20260413_v1.0_zh-HK.json  TJI_Quotation_20260413_v1.0_zh-HK_review.md
fixtures/: .gitignore  README.md  branch_ops_ai_robot_product_brief.md  cjk-comprehensive-smoke.md  fenced-mermaid-smoke.md  mermaid-noto-presets.md  uat-cjk.md  uat-en.md  uat-table.md  uat-zh.md
fonts/: README.md
references/: fonts-licensing.md  mermaid-noto-config.json  mermaid-review-checklist.md  release-checklist.md  validation-scenarios.md
scripts/: brand_pack.py  check_acceptance.py  ensure_mermaid_deps.py  fenced_rl.py  md_to_pdf.py
site/: 404.html  index.html  sitemap.xml
site/brand-packs/: index.html
site/cli/: index.html
site/determinism/: index.html
site/quickstart/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/watermarks/: index.html
src/mdpdf/: __init__.py  cli.py  errors.py  logging.py  pipeline.py
src/mdpdf/brand/: __init__.py  inline.py  legacy.py  migrate.py  overrides.py  registry.py  safe_paths.py  schema.py  styles.py
src/mdpdf/cache/: __init__.py  disk.py  tempfiles.py
src/mdpdf/diagnostics/: __init__.py  doctor.py
src/mdpdf/fonts/: __init__.py  installer.py  manager.py
src/mdpdf/i18n/: __init__.py  strings.py
src/mdpdf/markdown/: __init__.py  ast.py  parser.py
src/mdpdf/markdown/transformers/: __init__.py  collect_outline.py  filter_metadata_blocks.py  normalize_merged_atx_headings.py  promote_toc.py  strip_yaml_frontmatter.py
src/mdpdf/post_process/: __init__.py  footer.py  issuer_card.py  pipeline.py
src/mdpdf/render/: __init__.py  engine_base.py  engine_reportlab.py  flowables.py  lists.py  outline.py  tables.py
src/mdpdf/renderers/: __init__.py  base.py  code_pygments.py  image.py  mermaid_chain.py  mermaid_kroki.py  mermaid_lint.py  mermaid_puppeteer.py  mermaid_pure.py
src/mdpdf/security/: __init__.py  audit.py  contrast.py  deterministic.py  watermark_l1.py  watermark_l2.py
tests/: README.md  conftest.py  test_md_to_pdf_cjk.py  test_md_to_pdf_fences.py  test_md_to_pdf_mermaid_caption_text.py  test_md_to_pdf_toc_watermark.py
tests/golden/: conftest.py  test_ast_snapshots.py  test_deterministic_sha256.py  test_layout_fingerprints.py  test_text_layer_snapshots.py  test_xmp_snapshots.py
tests/golden/baselines/ast/: branch_ops_ai_robot_product_brief.txt  fenced-mermaid-smoke.txt  mermaid-noto-presets.txt  uat-cjk-comprehensive.txt  uat-cjk.txt  uat-table.txt  uat-zh.txt
tests/golden/baselines/layout_fingerprint/: branch_ops_ai_robot_product_brief.json  fenced-mermaid-smoke.json  mermaid-noto-presets.json  uat-cjk-comprehensive.json  uat-cjk.json  uat-en.json  uat-table.json  uat-zh.json
tests/integration/: test_brand_integration.py  test_brand_migration.py  test_comprehensive_uat.py  test_plan4_integration.py  test_renderers_integration.py  test_security_integration.py  test_walking_skeleton.py
tests/integration/fixtures/: blockquote-callout.md  code-suite.md  comprehensive-mini.md  hello-cjk.md  hello.md  image-suite.md  list-suite.md  locale-cjk.md  mermaid-bomb.md  mermaid-suite.md  mermaid-xss.md  outline-suite.md  table-suite.md
tests/unit/: test_check_acceptance.py  test_cli.py  test_errors.py  test_logging.py  test_package_skeleton.py  test_pipeline.py
tests/unit/brand/: test_inline.py  test_legacy.py  test_locales.py  test_migrate.py  test_overrides.py  test_registry.py  test_safe_paths.py  test_schema.py  test_styles.py
tests/unit/cache/: test_disk.py  test_tempfiles.py
tests/unit/diagnostics/: test_doctor.py
tests/unit/fonts/: test_installer.py  test_manager.py
tests/unit/i18n/: test_strings.py
tests/unit/markdown/: test_ast.py  test_parser.py  test_transformers.py
tests/unit/post_process/: test_footer.py  test_issuer_card.py  test_pipeline.py
tests/unit/render/: test_engine_base.py  test_engine_reportlab.py  test_flowables.py  test_flowables_callout.py  test_flowables_mermaid.py  test_lists.py  test_outline.py  test_tables.py
tests/unit/renderers/: test_base.py  test_code_pygments.py  test_image.py  test_mermaid_chain.py  test_mermaid_kroki.py  test_mermaid_lint.py  test_mermaid_puppeteer.py  test_mermaid_pure.py
tests/unit/security/: test_audit.py  test_contrast.py  test_deterministic.py  test_watermark_l1.py  test_watermark_l2.py
(+33 files in other folders)
